--- a/groupomania/src/app/auth/login/login.component.html
+++ b/groupomania/src/app/auth/login/login.component.html
@@ -1,17 +1,3 @@
-<!--<mat-spinner *ngIf="loading"></mat-spinner>
-<form [formGroup]="loginForm" *ngIf="!loading">
-  <div class="form-group">
-    <label for="email">Email</label>
-    <input type="email" class="form-control" id="email" formControlName="email">
-  </div>
-  <div class="form-group">
-    <label for="password">Password</label>
-    <input type="password" class="form-control" id="password" formControlName="password">
-  </div>
-  <button mat-raised-button color="primary" [disabled]="loginForm.invalid" (click)="onLogin()">LOGIN</button>
-  <p class="text-danger" *ngIf="errorMsg">{{ errorMsg }}</p>
-</form>-->
-
 <div class="container">
   <mat-card class="card">
   
@@ -20,7 +6,7 @@
 <form [formGroup]="loginForm" *ngIf="!loading">
     <mat-form-field appearance="fill" class="inputField">
       <mat-label>Email</mat-label>
-      <input matInput placeholder="pat@example.com" [formControl]="email" required class="form-control" id="email" formControlName="email">
+      <input matInput [formControl]="email" required class="form-control" id="email" formControlName="email">
       <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
     </mat-form-field>
 
