--- a/groupomania/src/app/app.component.html
+++ b/groupomania/src/app/app.component.html
@@ -7,21 +7,21 @@
     <a routerLink="/timeline" class="logo"><img src="../assets/logo-navbar-color.png" alt="Logo Groupomania"></a>
     <a routerLink="/timeline" class="logoTablet"><img src="../assets/icon.png" alt="Logo Groupomania"></a>
     <div class="responsive">
-    <div class="hover-info homeb">
+    <div class="hover-info homebtn">
       <a mat-icon-button class="example-icon home" routerLink="/timeline" *ngIf="AuthGuard.isLoggedin">
         <mat-icon>home</mat-icon>
       </a>
       <div class="info home-info">Fil d'actualité</div>
     </div>
 
-    <div class="hover-info accountb">
+    <div class="hover-info accountbtn">
       <a mat-icon-button class="example-icon account" routerLink="/user-profile" *ngIf="AuthGuard.isLoggedin">
         <mat-icon>account_circle</mat-icon>
       </a>
       <div class="info account-info">Profil</div>
     </div>
 
-    <div class="hover-info logoutb">
+    <div class="hover-info logoutbtn">
       <a mat-icon-button class="example-icon logout" routerLink="/logout" (click)="onLogout()"
         *ngIf="AuthGuard.isLoggedin">
         <mat-icon>logout</mat-icon>
@@ -29,14 +29,14 @@
       <div class="info logout-info">Se déconnecter</div>
     </div>
 
-    <div class="hover-info signupb" *ngIf="!AuthGuard.isLoggedin">
+    <div class="hover-info signupbtn" *ngIf="!AuthGuard.isLoggedin">
       <a mat-icon-button class="example-icon signup" routerLink="/signup">
         <mat-icon>person_add</mat-icon>
       </a>
       <div class="info signup-info">S'inscrire</div>
     </div>
 
-    <div class="hover-info signinb" *ngIf="!AuthGuard.isLoggedin">
+    <div class="hover-info signinbtn" *ngIf="!AuthGuard.isLoggedin">
       <a mat-icon-button class="example-icon signin" routerLink="/login">
         <mat-icon>login</mat-icon>
       </a>
