--- a/groupomania/src/app/app.component.scss
+++ b/groupomania/src/app/app.component.scss
@@ -1,74 +1,3 @@
-
-/*.logo {
-    width: 200px;
-    margin-top: 8px;
-    img {
-        width: 100%;
-        vertical-align: baseline;
-    }
-}
-
-.mat-toolbar {
-    display: flex;
-    position: relative;
-    width: 100%;
-    background-color: white;
-    color: #fd2d01;
-    -webkit-box-shadow: 0px 1px 5px 0px rgba(183,185,189,1);
-    -moz-box-shadow: 0px 1px 5px 0px rgba(183,185,189,1);
-    box-shadow: 0px 1px 5px 0px rgba(183,185,189,1);
-}
-
-.label-hover {
-    color: white;
-    font-weight: normal;
-    position: absolute;
-    margin-top: 35px;
-    border-radius: 7px;
-    background-color: rgba(0, 0, 0, 0.700);
-    padding-left: 5px;
-    padding-right: 5px;
-    font-size: small;
-    opacity: 0;
-    transition: 0.3s;
-}
-
-.profil-icon:hover + .label-hover{ 
-    opacity: 1;
-}
-.home-icon:hover + .label-hover{ 
-    opacity: 1;
-}
-.logout-icon:hover + .label-hover{ 
-    opacity: 1;
-}
-
-.logout-b {
-    position: absolute;
-    right: 0;
-}
-
-.home-b {
-    position: absolute;
-    right: 50%;
-}
-
-.profil-b {
-    position: absolute;
-    right:142.8px;
-}
-
-.navbar-icon {
-    width: 10%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.mat-icon {
-    font-size: 30px;
-    width: 100%;
-}*/
-
 .logo {
     width: 200px;
     margin-top: 8px;
@@ -128,6 +57,26 @@
         font-size: 35px;
     }
 }
+.homebtn {
+    position: absolute;
+    right: 135px;
+}
+.accountbtn {
+    position: absolute;
+    right: 85px;
+}
+.logoutbtn {
+    position: absolute;
+    right: 35px;
+}
+.signinbtn {
+    position: absolute;
+    right: 35px;
+}
+.signupbtn {
+    position: absolute;
+    right: 85px;
+}
 .home:hover + .home-info {
     opacity: 1;
 }
@@ -154,26 +103,7 @@
     align-items: center;
     width: 5%;
 }
-.homeb {
-    position: absolute;
-    right: 135px;
-}
-.accountb {
-    position: absolute;
-    right: 85px;
-}
-.logoutb {
-    position: absolute;
-    right: 35px;
-}
-.signinb {
-    position: absolute;
-    right: 35px;
-}
-.signupb {
-    position: absolute;
-    right: 85px;
-}
+
 
 footer {
     bottom: 0;
