--- a/groupomania/src/app/profile-update/profile-update.component.scss
+++ b/groupomania/src/app/profile-update/profile-update.component.scss
@@ -25,7 +25,7 @@ p {
     }
 }
 
-.imgProfile {
+.profileImage {
     display: flex;
     img {
         width: 200px;
@@ -34,7 +34,7 @@ p {
         object-fit: cover;
         margin-bottom: 20px;
     }
-    .imgUpdate {
+    .imageUpdate {
         display: flex;
         flex-direction: column;
         input {
@@ -70,7 +70,7 @@ p {
     max-width: 273px;
 }
 @media only screen and (max-width: 575px) {
-    .imgProfile {
+    .profileImage {
         img {
             width: 80px;
             height: 80px;
