--- a/groupomania/src/app/timeline/timeline.component.html
+++ b/groupomania/src/app/timeline/timeline.component.html
@@ -1,5 +1,3 @@
-
-
 <div class="postbtn">
   <button mat-raised-button (click)="openMessageDialog()">Message</button>
   <button mat-raised-button (click)="openMediaDialog()">Photo</button>
@@ -7,14 +5,14 @@
 
 <mat-card class="example-card empty" *ngIf="posts?.length === 0">
   <mat-card-content>
-      <h1>Oh non... </h1>
-      <p>
-         Personne n'a encore publié sur notre site... Soyez le premier à partager du contenu !
-      </p>
+    <h1>Oh non... </h1>
+    <p>
+      Personne n'a encore publié sur notre site... Soyez le premier à partager du contenu !
+    </p>
   </mat-card-content>
   <mat-card-action class="postbtn">
-      <button mat-raised-button (click)="openMessageDialog()">Message</button>
-      <button mat-raised-button (click)="openMediaDialog()">Photo</button>
+    <button mat-raised-button (click)="openMessageDialog()">Message</button>
+    <button mat-raised-button (click)="openMediaDialog()">Photo</button>
   </mat-card-action>
 </mat-card>
 
@@ -22,12 +20,14 @@
 
   <mat-card class="example-card" *ngFor="let post of posts | slice: pageSize | slice: 0:itemsPerPage">
     <mat-card-header>
-      <img mat-card-avatar class="example-header-image" [src]="post.user?.imageUrl" alt="Photo de profil de {{ post.user?.firstname }} {{ post.user?.lastname }}">
+      <img mat-card-avatar class="example-header-image" [src]="post.user?.imageUrl"
+        alt="Photo de profil de {{ post.user?.firstname }} {{ post.user?.lastname }}">
       <mat-card-title>{{ post.user.firstname }} {{ post.user.lastname }}</mat-card-title>
     </mat-card-header>
     <mat-card-content (click)="onClickPost(post.post_id)">
       <h1>{{ post.title }}</h1>
-      <img mat-card-image *ngIf="post.mediaUrl != null" [src]="post.mediaUrl" alt="Photo publiée par {{ post.user?.firstname }} {{ post.user?.lastname }}">
+      <img mat-card-image *ngIf="post.mediaUrl != null" [src]="post.mediaUrl"
+        alt="Photo publiée par {{ post.user?.firstname }} {{ post.user?.lastname }}">
       <div class="hidden">
         <p class="text">
           {{ post.content }}
@@ -55,7 +55,7 @@
             </div>
             <div *ngIf="post.likes.length >= 10" class="infoLike">
               <mat-icon class="count">thumb_up</mat-icon> {{ post.likes.length }}
-          </div>
+            </div>
           </div>
         </div>
         <div>
