--- a/groupomania/src/app/app.component.html
+++ b/groupomania/src/app/app.component.html
@@ -1,69 +1,71 @@
-
-
-
 <title>Groupomania</title>
 <div class="container">
   <mat-toolbar>
     <a routerLink="/timeline" class="logo"><img src="../assets/logo-navbar-color.png" alt="Logo Groupomania"></a>
     <a routerLink="/timeline" class="logoTablet"><img src="../assets/icon.png" alt="Logo Groupomania"></a>
     <div class="responsive">
-    <div class="hover-info homebtn">
-      <a mat-icon-button class="example-icon home" routerLink="/timeline" *ngIf="AuthGuard.isLoggedin">
-        <mat-icon>home</mat-icon>
-      </a>
-      <div class="info home-info">Fil d'actualité</div>
+      <div class="hover-info homebtn">
+        <a mat-icon-button class="example-icon home" routerLink="/timeline" *ngIf="AuthGuard.isLoggedin">
+          <mat-icon>home</mat-icon>
+        </a>
+        <div class="info home-info">Fil d'actualité</div>
+      </div>
+
+      <div class="hover-info accountbtn">
+        <a mat-icon-button class="example-icon account" routerLink="/user-profile" *ngIf="AuthGuard.isLoggedin">
+          <mat-icon>account_circle</mat-icon>
+        </a>
+        <div class="info account-info">Profil</div>
+      </div>
+
+      <div class="hover-info logoutbtn">
+        <a mat-icon-button class="example-icon logout" routerLink="/logout" (click)="onLogout()"
+          *ngIf="AuthGuard.isLoggedin">
+          <mat-icon>logout</mat-icon>
+        </a>
+        <div class="info logout-info">Se déconnecter</div>
+      </div>
+
+      <div class="hover-info signupbtn" *ngIf="!AuthGuard.isLoggedin">
+        <a mat-icon-button class="example-icon signup" routerLink="/signup">
+          <mat-icon>person_add</mat-icon>
+        </a>
+        <div class="info signup-info">S'inscrire</div>
+      </div>
+
+      <div class="hover-info signinbtn" *ngIf="!AuthGuard.isLoggedin">
+        <a mat-icon-button class="example-icon signin" routerLink="/login">
+          <mat-icon>login</mat-icon>
+        </a>
+        <div class=" info signin-info">Se connecter</div>
+      </div>
     </div>
 
-    <div class="hover-info accountbtn">
-      <a mat-icon-button class="example-icon account" routerLink="/user-profile" *ngIf="AuthGuard.isLoggedin">
-        <mat-icon>account_circle</mat-icon>
-      </a>
-      <div class="info account-info">Profil</div>
-    </div>
-
-    <div class="hover-info logoutbtn">
-      <a mat-icon-button class="example-icon logout" routerLink="/logout" (click)="onLogout()"
-        *ngIf="AuthGuard.isLoggedin">
-        <mat-icon>logout</mat-icon>
-      </a>
-      <div class="info logout-info">Se déconnecter</div>
-    </div>
-
-    <div class="hover-info signupbtn" *ngIf="!AuthGuard.isLoggedin">
-      <a mat-icon-button class="example-icon signup" routerLink="/signup">
-        <mat-icon>person_add</mat-icon>
-      </a>
-      <div class="info signup-info">S'inscrire</div>
-    </div>
-
-    <div class="hover-info signinbtn" *ngIf="!AuthGuard.isLoggedin">
-      <a mat-icon-button class="example-icon signin" routerLink="/login">
-        <mat-icon>login</mat-icon>
-      </a>
-      <div class=" info signin-info">Se connecter</div>
-    </div>
-  </div>
-
-    <button mat-button [matMenuTriggerFor]="menu" *ngIf="AuthGuard.isLoggedin" class="menuBurger"><mat-icon>menu</mat-icon></button>
+    <button mat-button [matMenuTriggerFor]="menu" *ngIf="AuthGuard.isLoggedin" class="menuBurger">
+      <mat-icon>menu</mat-icon>
+    </button>
     <mat-menu #menu="matMenu">
       <a mat-menu-item mat-menu-item class="example-icon home" routerLink="/timeline" *ngIf="AuthGuard.isLoggedin">
         <mat-icon>home</mat-icon> Fil d'actualité
       </a>
-      <a mat-menu-item mat-menu-item class="example-icon account" routerLink="/user-profile" *ngIf="AuthGuard.isLoggedin">
+      <a mat-menu-item mat-menu-item class="example-icon account" routerLink="/user-profile"
+        *ngIf="AuthGuard.isLoggedin">
         <mat-icon>account_circle</mat-icon>Profil
       </a>
       <a mat-menu-item class="example-icon logout" routerLink="/logout" (click)="onLogout()"
         *ngIf="AuthGuard.isLoggedin">
         <mat-icon>logout</mat-icon>Se déconnecter
-      </a>   
+      </a>
     </mat-menu>
 
-    <button mat-button [matMenuTriggerFor]="menuLogout" *ngIf="!AuthGuard.isLoggedin" class="menuBurger"><mat-icon>menu</mat-icon></button>
+    <button mat-button [matMenuTriggerFor]="menuLogout" *ngIf="!AuthGuard.isLoggedin" class="menuBurger">
+      <mat-icon>menu</mat-icon>
+    </button>
     <mat-menu #menuLogout="matMenu">
       <a mat-menu-item class="example-icon signup" routerLink="/signup">
         <mat-icon>person_add</mat-icon>S'inscrire
       </a>
-      
+
 
       <a mat-menu-item class="example-icon signin" routerLink="/login">
         <mat-icon>login</mat-icon>Se connecter
