--- a/groupomania/src/app/user-profile/user-profile.component.html
+++ b/groupomania/src/app/user-profile/user-profile.component.html
@@ -1,6 +1,6 @@
 <div class="profile">
-    <h1>Bienvenue sur votre profil<span class="name">&ensp;{{ user?.firstname }}</span></h1>
-    <h2>Vos informations:</h2>
+    <h1><span class="name">&ensp;{{ user?.firstname }} {{ user?.lastname }}</span></h1>
+    <h2>Votre compte</h2>
     <div class="allProfile">
 
         <div class="txtProfile">
