--- a/groupomania/src/app/auth/login/login.component.html
+++ b/groupomania/src/app/auth/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <mat-card class="card">
   
-  <h1>Connectez-vous à votre compte Groupomania</h1>
+  <h1>Connexion</h1>
 <mat-spinner *ngIf="loading"></mat-spinner>
 <form [formGroup]="loginForm" *ngIf="!loading">
     <mat-form-field appearance="fill" class="inputField">
@@ -14,15 +14,12 @@
     <mat-form-field appearance="fill" class="inputField">
       <mat-label>Mot de passe</mat-label>
       <input matInput [type]="hide ? 'password' : 'text'" class="form-control" id="password" formControlName="password" required>
-      <div mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-        <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-      </div>
     </mat-form-field>
   </div>
 
   <button class="btn" mat-raised-button [disabled]="loginForm.invalid" (click)="onLogin()">Se connecter</button>
   <p class="text-danger" *ngIf="errorMsg">{{ errorMsg }}</p>
-  <p class="signup">Vous n'êtes pas encore inscrit ?&ensp;<a routerLink="/signup">Inscrivez-vous !</a></p>
+  <p class="signup">&ensp;<a routerLink="/signup">Inscription</a></p>
 </form>
 </mat-card>
 </div>
