--- a/groupomania/src/app/profile-update/account-delete.html
+++ b/groupomania/src/app/profile-update/account-delete.html
@@ -1,7 +1,7 @@
 <mat-dialog-content>
     <h2>Attention !</h2>
     <p>Voulez vous vraiment supprimer votre compte ?</p>
-    <button mat-raised-button mat-dialog-close color="warn" (click)="onDelete()">Supprimer mon compte</button>
+    <button mat-raised-button mat-dialog-close color="warn" (click)="onDelete()">oui supprimer mon compte</button>
   </mat-dialog-content>
   <mat-dialog-actions>
     <button mat-button mat-dialog-close>Annuler</button>
