--- a/groupomania/src/app/app.component.scss
+++ b/groupomania/src/app/app.component.scss
@@ -104,7 +104,10 @@
     width: 5%;
 }
 
-
+.container {
+    max-width: 1440px;
+    padding: 0;
+}
 footer {
     bottom: 0;
     left: 0;
@@ -112,7 +115,10 @@ footer {
     background: transparent;
     width: 100%;
   }
-
+  @media (min-width: 992px) {
+  .container {
+      max-width: inherit; }
+  }
 @media only screen and (max-width: 768px) {
     .logo {
         width: 200px;
