--- a/groupomania/src/app/auth/signup/signup.component.html
+++ b/groupomania/src/app/auth/signup/signup.component.html
@@ -6,9 +6,6 @@
             <mat-spinner *ngIf="loading"></mat-spinner>
             <form [formGroup]="signupForm" *ngIf="!loading" class="inputField">
                 <div class="form-group">
-
-                    <a mat-raised-button routerLink="/login">Page de connexion</a>
-
                     <div class="txtProfile">
                         <p class="infos">Votre prénom:</p>
                         <mat-form-field appearance="fill">
@@ -68,6 +65,7 @@
             <button mat-raised-button [disabled]="signupForm.invalid || passwordForm.invalid"
                 (click)="onSignup()">S'inscrire</button>
             <p class="pwdInvalid" *ngIf="errorMsg">{{ errorMsg }}</p>
+            <p class="loginLink">&ensp;<a routerLink="/login">Connexion</a></p>
         </mat-card>
     </div>
 </div>
